<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/menu_title_user_info" />
        <item
            android:id="@+id/nav_training"
            android:icon="@drawable/ic_menu_run"
            android:title="@string/menu_title_trainings" />
        <item
            android:id="@+id/nav_eating"
            android:icon="@drawable/ic_menu_food"
            android:title="@string/menu_title_nutrition" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ic_menu_goal"
            android:title="@string/menu_title_goals" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_title_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_star"
                android:title="@string/menu_title_rate_app" />
        </menu>
    </item>

</menu>
